--- a/package.json
+++ b/package.json
@@ -3,11 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.0.0-beta",
+    "apollo-cache-inmemory": "^1.1.2",
+    "apollo-client": "^2.1.0",
+    "apollo-link": "^1.0.4",
+    "apollo-link-error": "^1.0.2",
+    "apollo-link-http": "^1.3.0",
+    "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
+    "react-apollo": "^2.0.1",
+    "bootstrap": "^4.0.0-beta",
     "react": "^16.2.0",
     "react-burger-menu": "^2.1.11",
     "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-select": "^1.1.0",
     "react-treeview": "^0.4.7",
@@ -18,5 +27,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "https://ksa.spsu.ru"
 }
